--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -29,5 +29,9 @@
     <entry name="Tyranids/Prosperity" value="Prosperity"/>
     <entry name="Tyranids/ProsperityDescription" value="Increases city growth"/>
     <!-- End of Prosperity -->
-
+    <entry name="VehicleDescription" value="Negates the penalty for heavy and ordnance weapons. Increases the movement penalty in forests and imperial ruins. Missing hit points reduces accuracy and movement."/>
+    <entry name="VehicleDamaged" value="Missing 33% hit points"/>
+	<entry name="VehicleDamagedDescription" value="Reduces the accuracy."/>
+	<entry name="VehicleHeavilyDamaged" value="Missing 66% hit points"/>
+	<entry name="VehicleHeavilyDamagedDescription" value="Reduces the accuracy and movement."/>
 </language>
