Librarian: total rework of abilities Added Spectral Blade: increases melee attacks by 3/6/9 with 3 cooldown Added Might Of Heroes: three turns buff of HP, acc and damage by 17% with 10/5/3 cooldown Added Empire Within: level up with 7/5/3 cooldown Added Null Zone ultimate: removes many reductions for 1 turn in adjacent tiles with 5 cooldown

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -6,4 +6,15 @@
     <entry name="SpaceMarines/TacticalPrecision" value="Tactical Precision"/>
     <entry name="SpaceMarines/TacticalPrecisionDescription" value="Removes penalty from firing heavy weapons after movement and treats shooting with rapid fire weapons as if in half range."/>
     <entry name="SpaceMarines/TacticalPrecisionFlavor" value="Precisely!"/>
+    <entry name="SpaceMarines/EmpireWithin" value="Empire Within"/>
+    <entry name="SpaceMarines/EmpireWithinDescription" value="Levels up non-hero friendly unit."/>
+    <entry name="SpaceMarines/EmpireWithinFlavor" value="I will share my wisdom, afraid not."/>
+    <entry name="SpaceMarines/MightOfHeroes" value="Might Of Heroes"/>
+    <entry name="SpaceMarines/MightOfHeroesDescription" value="Temporary increases hit points, the accuracy and the damage of friendly unit."/>
+    <entry name="SpaceMarines/MightOfHeroesFlavor" value="Forward without hesitation."/>
+	<entry name="SpaceMarines/NullZone" value="<string name='Traits/NullZone'/>"/>
+	<entry name="SpaceMarines/NullZoneDescription" value="<string name='Traits/NullZoneDescription'/>"/>
+	<entry name="SpaceMarines/NullZoneFlavor" value="<string name='Traits/NullZoneFlavor'/>"/>
+    <entry name="SpaceMarines/SpectralBlade" value="Spectral Blade"/>
+	<entry name="SpaceMarines/SpectralBladeDescription" value="Increases Librarian's melee attacks."/>
 </language>
