--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -30,6 +30,7 @@
 	<entry name="SpaceMarines/FortressOfRedemptionDamageReduction2" value="Stronghold Shielding 2"/>
 	<entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Description" value="Increases the invulnerable damage reduction."/>
 	<entry name="SpaceMarines/FortressOfRedemptionDamageReduction2Flavor" value="Gladius Prime is already proving far more hostile than the Adeptus Administratum's worst forecasts. With the Fortress' physical defenses under almost constant assault, the Techmarines approve installation of a void shield. Once constructed, this shimmering dome of power is sufficient to warp away the firepower of entire battalions (or even a rogue Imperial Knight) before collapsing."/>
+	<entry name="SpaceMarines/PredatorLascannonDescription" value="Grants Fortresses of Redemption Twin-Linked Lascannon. Grants Predators and Aquila Macro-Cannons extra Heavy Bolters."/>
     <!-- Start of Prosperity -->
     <entry name="AdeptusMechanicus/Prosperity" value="Prosperity"/>
     <entry name="AdeptusMechanicus/ProsperityDescription" value="Increases city growth"/>
