Introduced concept of Bodyguard unit, which increases hero damage reduction by 10% if adjacent to hero. Regular infantry increasea hero damage reduction by 5% if adjacent to hero. Default hero damage reduction decreased from 50% to 20%. Maximum hero damage reduction is set to 50%.

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -62,4 +62,7 @@
     <entry name="NullZone" value="Null Zone"/>
     <entry name="NullZoneDescription" value="Removes invulnerable, witchfire and feel no pain damage reduction."/>
     <entry name="NullZoneFlavor" value="No one is save beside angered Librarian."/>
+    <entry name="Bodyguard" value="Bodyguard"/>
+    <entry name="BodyguardDescription" value="Increases adjacent heroes hero damage reduction"/>
+	<entry name="HeroDescription" value="Increases the damage reduction of infantry units. Each adjacent infantry unit increases damage reduction by additional 5% (10% for Bodyguard units)"/>
 </language>
