--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -65,4 +65,5 @@
     <entry name="Bodyguard" value="Bodyguard"/>
     <entry name="BodyguardDescription" value="Increases adjacent heroes hero damage reduction"/>
 	<entry name="HeroDescription" value="Increases the damage reduction of infantry units. Each adjacent infantry unit increases damage reduction by additional 5% (10% for Bodyguard units)"/>
+	<entry name="KillshotDescription" value="Increases the damage against monstrous creatures, vehicles, heroes and fortifications."/>
 </language>
