--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -3,6 +3,9 @@
     <entry name="SpaceMarines/Techmarine" value="<string name='Units/SpaceMarines/Techmarine'/>"/>
     <entry name="SpaceMarines/TechmarineDescription" value="<string name='Units/SpaceMarines/TechmarineDescription'/>"/>
     <entry name="SpaceMarines/TechmarineFlavor" value="<string name='Units/SpaceMarines/TechmarineFlavor'/>"/>
+    <entry name="SpaceMarines/SiegeManeuvers" value="Siege Maneuvers"/>
+    <entry name="SpaceMarines/SiegeManeuversDescription" value="Grants Thunderfire Cannon ability to ignore penalty for firing heavy weapons after movement. Increases Thunderfire Cannon hit points."/>
+    <entry name="SpaceMarines/SiegeManeuversFlavor" value="A measured advance allows Thunderfire Cannons to unleash a steady stream of fire."/>
     <entry name="SpaceMarines/AwakenTheMachine" value="<string name='Actions/AwakenTheMachine'/>"/>
     <entry name="SpaceMarines/AwakenTheMachineDescription" value="Grants Techmarine the ability to boost the damage of vehicles."/>
     <entry name="SpaceMarines/AwakenTheMachineFlavor" value="<string name='Actions/AwakenTheMachineFlavor'/>"/>
