--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -23,4 +23,5 @@
     <entry name="SpaceMarines/NullZone" value="<string name='Traits/NullZone'/>"/>
     <entry name="SpaceMarines/NullZoneDescription" value="<string name='Traits/NullZoneDescription'/>"/>
     <entry name="SpaceMarines/NullZoneFlavor" value="<string name='Traits/NullZoneFlavor'/>"/>
+	<entry name="DevastatorDoctrineDescription" value="Chapter tactic that increases the accuracy of Kill Team Eliminators and Devastator Centurions."/>
 </language>
