--- a/Mod/Data/Core/Languages/English/Weapons.xml
+++ b/Mod/Data/Core/Languages/English/Weapons.xml
@@ -2,4 +2,6 @@
 <language>
     <entry name="BoltSniperRifle" value="Bolt Sniper Rifle"/>
     <entry name="BoltSniperRifleFlavor" value="Sniper rifles have powerful telescopic sights, enabling the firer to target weak points and distant foes with unerring accuracy. Some commanders see the sniper rifle as a dishonourable weapon, but they are in the minority. Most understand that pragmatism, and dead enemies, win more battles than honour ever will."/>
+    <entry name="GaussReaper" value="Gauss Reaper"/>
+    <entry name="GaussReaperFlavor" value="Gauss weapon which trades range for increased hitting power."/>
 </language>
