--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -37,6 +37,11 @@
     <entry name="Necrons/MethodicalDestruction" value="<string name='Traits/Necrons/MethodicalDestruction'/>"/>
     <entry name="Necrons/MethodicalDestructionDescription" value="Increases the accuracy of the Lord and adjacent allied Necrons infantry."/>
     <entry name="Necrons/MethodicalDestructionFlavor" value="<string name='Traits/Necrons/MethodicalDestructionFlavor'/>"/>
-
+    <entry name="Necrons/CountertemporalNanomines" value="<string name='Traits/Necrons/CountertemporalNanomines'/>"/>
+	<entry name="Necrons/CountertemporalNanominesDescription" value="Immobilizes enemy unit."/>
+	<entry name="Necrons/CountertemporalNanominesFlavor" value="<string name='Traits/Necrons/CountertemporalNanominesFlavor'/>"/>
+    <entry name="Necrons/CunningAdvisors" value="<string name='Traits/Necrons/CunningAdvisors'/>"/>
+	<entry name="Necrons/CunningAdvisorsDescription" value="<string name='Traits/Necrons/CunningAdvisorsDescription'/>"/>
+	<entry name="Necrons/CunningAdvisorsFlavor" value="<string name='Traits/Necrons/CunningAdvisorsFlavor'/>"/>
 	<entry name="Eldar/ActivateWebwayGateDescription" value="Activates and claims a neutral Webway Gate. Must be within 3 tiles of friendly Eldar unit."/>
 </language>
