--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -122,7 +122,13 @@
     <entry name="Necrons/MethodicalDestruction" value="Methodical Destruction"/>
     <entry name="Necrons/MethodicalDestructionDescription" value="Increases the accuracy."/>
     <entry name="Necrons/MethodicalDestructionFlavor" value="The Dynasty excel in systematic killing, marking each target then concentrating their fury upon it until it is completely obliterated."/>
-	<entry name="Fright" value="Fright"/>
+	<entry name="Necrons/CountertemporalNanomines" value="Countertemporal Nanomines"/>
+	<entry name="Necrons/CountertemporalNanominesDescription" value="Immobilized."/>
+	<entry name="Necrons/CountertemporalNanominesFlavor" value="Released from a hive-gem about the bearer’s person, a swarm of nanoscarabs sweep out and lace the ground before them with microscopic temporal charges. Foes advancing into this invisible minefield find reality stuttering and glitching around them as they trigger one minute chronofault after another."/>
+    <entry name="Necrons/CunningAdvisors" value="Cunning Advisors"/>
+	<entry name="Necrons/CunningAdvisorsDescription" value="Greatly increases research output."/>
+	<entry name="Necrons/CunningAdvisorsFlavor" value="The greater a Necron nobles reputation, the more cunning and accomplished are the Crypteks who seek them out and offer them service."/>
+    <entry name="Fright" value="Fright"/>
 	<entry name="FrightDescription" value="Reduces the morale each turn."/>
 	<entry name="FrightFlavor" value="<string name='Actions/AuraOfFearFlavor'/>"/>
 </language>
